--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #MySQL Data Source Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/hotelworld
 spring.datasource.username=root
-spring.datasource.password=Jupajejo1#
+spring.datasource.password=1234
 
 #Hibernate Configuration
 
